# gamekit

./: .gitignore  CMakeLists.txt  configure-android
CMake/: ConfigOgreKit.cmake
CMake/Toolchains/: android.toolchain.cmake
Dependencies/: CMakeLists.txt
Dependencies/OIS/include/mac/: MacInputManager.h  MacMouse.h
Dependencies/OIS/src/mac/: MacInputManager.cpp  MacMouse.cpp
Dependencies/Ogre-1.9a/: CMakeLists.txt
Dependencies/Ogre-1.9a/OgreMain/include/: OgrePixelFormatDescriptions.h  OgrePlatform.h
Dependencies/Ogre-1.9a/OgreMain/src/: OgrePixelFormat.cpp  OgreProgressiveMeshGenerator.cpp  OgreQueuedProgressiveMeshGenerator.cpp
Dependencies/Ogre-1.9a/RenderSystems/GL/src/OSX/: OgreOSXCarbonWindow.cpp  OgreOSXCocoaWindow.mm  OgreOSXGLSupport.mm
Engine/: CMakeLists.txt  gkCoreApplication.h  gkEngine.cpp  gkGameObject.cpp  gkUtils.cpp  gkWindow.cpp
Engine/Loaders/Blender2/: gkBlenderSceneConverter.cpp
Engine/LogicBricks/: gkDelaySensor.cpp  gkMouseSensor.cpp  gkMouseSensor.h
Ogre-1.9a/OgreMain/src/: OgreQueuedProgressiveMeshGenerator.cpp
Ogre-1.9a/RenderSystems/GL/src/OSX/: OgreOSXCocoaWindow.mm
Samples/: CMakeLists.txt
Samples/AndroidDemo/Demo/: .classpath  build.xml
Samples/EmbedDemo/: CMakeLists.txt
Samples/FileInspector/: CMakeLists.txt
Samples/LuaEditor/: CMakeLists.txt
Samples/NodeEditor/: CMakeLists.txt
Samples/NodeEditor/Font/: CMakeLists.txt
Samples/Runtime/: CMakeLists.txt  Main.cpp  android.cpp
Samples/Runtime/Android/: AndroidManifest.xml  build.xml
